syntax = "proto3";

package testproto;

option java_package = "testproto";
option java_outer_classname = "NestedProtos";

// Nested message with 1-3 levels
message Nested {
  string name = 1;
  Inner inner = 2;
  repeated Inner inner_list = 3;

  message Inner {
    int32 value = 1;
    string description = 2;
    DeepInner deep = 3;
    repeated DeepInner deep_list = 4;

    message DeepInner {
      bool flag = 1;
      double score = 2;
      bytes data = 3;
    }
  }
}

// Single-level recursion
message Recursive {
  string id = 1;
  int32 depth = 2;
  Recursive child = 3;
  repeated Recursive children = 4;
}

// Mutual recursion A <=> B
message MutualA {
  string name = 1;
  int32 value_a = 2;
  MutualB b_field = 3;
  repeated MutualB b_list = 4;
}

message MutualB {
  string label = 1;
  double value_b = 2;
  MutualA a_field = 3;
  repeated MutualA a_list = 4;
}